added 4 new API for professoional and personal infor
