# src/controllers/index.ts
@@ -1,0 +1,3 @@
+export * from './ERP';
+export * from './empPersonal';
+export * from './professional';
