# src/routes/empPersonal.ts
@@ -1,0 +1,12 @@
+import { Router } from 'express';
+import { getPersonalInfo, createPersonalInfo } from '../controllers';
+import { paramsValidator } from '../middleware';
+
+const router:Router = Router();
+
+router.get('/:id', paramsValidator,getPersonalInfo);
+
+router.post('/',createPersonalInfo);
+
+export const personalRouter:Router =  router;
+
