# src/routes/index.ts
@@ -1,0 +1,3 @@
+export * from './ERProutes';
+export * from './empPersonal';
+export * from './professional';
